--- a/resources/install/windows/installer-windows.wxs
+++ b/resources/install/windows/installer-windows.wxs
@@ -203,8 +203,12 @@
       NOT (IS_AUTOUPDATE = 1)
     </Show>
     <Show Dialog="CAutoupdateProgressDlg" Before="ExecuteAction">
-      <![CDATA[IS_AUTOUPDATE = 1]]>
+      IS_AUTOUPDATE = 1
     </Show>
+
+    <Custom Action="LaunchApplication" After="ExecuteAction">
+      IS_AUTOUPDATE = 1
+    </Custom>
 
     <Custom Action="SetIS_AUTOUPDATE" After="AppSearch">
       <![CDATA[NOT Installed AND %SIP_COMMUNICATOR_AUTOUPDATE_INSTALLDIR <> ""]]>
